--- a/files.html
+++ b/files.html
@@ -6,12 +6,6 @@
     <title>文件管理 - Harry's Game</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/files.css">
-    <script>
-        // 强制使用 HTTPS
-        if (window.location.protocol !== 'https:' && window.location.hostname !== 'localhost') {
-            window.location.href = 'https://' + window.location.hostname + window.location.pathname + window.location.search;
-        }
-    </script>
 </head>
 <body>
     <div class="file-manager-container">
@@ -44,7 +38,7 @@
         // 检查登录状态
         async function checkLoginStatus() {
             try {
-                const response = await fetch('https://' + window.location.hostname + '/api/check_login.php', {
+                const response = await fetch('/api/check_login.php', {
                     credentials: 'same-origin'  // 发送 cookies
                 });
                 const data = await response.json();
@@ -65,7 +59,7 @@
         // 加载文件列表
         async function loadFiles() {
             try {
-                const response = await fetch('https://' + window.location.hostname + '/api/get_files.php', {
+                const response = await fetch('/api/get_files.php', {
                     credentials: 'same-origin'
                 });
                 const data = await response.json();
@@ -128,7 +122,7 @@
             document.getElementById('upload-progress').style.display = 'block';
 
             try {
-                const response = await fetch('https://' + window.location.hostname + '/api/update_file.php', {
+                const response = await fetch('/api/update_file.php', {
                     method: 'POST',
                     body: formData,
                     credentials: 'same-origin'
@@ -161,7 +155,7 @@
 
         // 下载文件
         function downloadFile(fileId) {
-            window.location.href = 'https://' + window.location.hostname + `/api/download_file.php?file_id=${fileId}`;
+            window.location.href = `/api/download_file.php?file_id=${fileId}`;
         }
 
         // 删除文件
@@ -171,7 +165,7 @@
             }
 
             try {
-                const response = await fetch('https://' + window.location.hostname + '/api/delete_file.php', {
+                const response = await fetch('/api/delete_file.php', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
